# mapcrafter

./: .gitignore  CMakeLists.txt  default.nix
src/: CMakeLists.txt  mapcrafter.cpp
src/data/template/: index.html
src/data/template/static/css/: style.css
src/data/template/static/js/: mapcrafterui.js
src/data/template/static/js/control/: marker.js  mousepos.js  rotationselect.js
src/data/template/static/js/handler/: rotationselect.js
src/mapcraftercore/: CMakeLists.txt
src/mapcraftercore/config/: mapcrafterconfig.cpp  mapcrafterconfig.h
src/mapcraftercore/mc/: region.h  worldcache.h  worldcrop.h
src/mapcraftercore/renderer/: manager.cpp  rendermode.h  tilerenderer.h
src/mapcraftercore/renderer/rendermodes/: cave.h  heightoverlay.h  lighting.h  overlay.h  slimeoverlay.h  spawnoverlay.h
src/mapcraftercore/renderer/renderviews/isometric/: tilerenderer.h
src/mapcraftercore/renderer/renderviews/topdown/: blockimages.h
src/mapcraftercore/util/: logging.cpp  other.h  picojson.h
src/tools/: CMakeLists.txt
